EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/07/2009==
Trevius: (Erde) The Web Tool now shows the name of the process running each Dynamic zone (example: dynamic_01)

==05/06/2009==
Angelox: Bots: Added command '#bot shrinkme' requires Shaman or Beastlord (defaults to Shaman). 
Derision: Added redux_aa2, redux_rate2 fields to aa_actions.
Derision: Improved Hasty Exit should now reduce the reuse time of Escape.
Derision: The reuse timer in the AA window now shows the reuse time reduced by applicable AAs.
	  (although if you purchase an AA that reduces the reuse time, you must camp before the reduced reuse time will be updated).

REQUIRED SQL:

ALTER TABLE `aa_actions` ADD `redux_aa2` MEDIUMINT( 8 ) UNSIGNED NOT NULL DEFAULT '0',
ADD `redux_rate2` TINYINT( 4 ) NOT NULL DEFAULT '0';
UPDATE `aa_actions` SET `redux_aa2` = '886',
`redux_rate2` = '10' WHERE `aa_actions`.`aaid` =243 AND `aa_actions`.`rank` =0 LIMIT 1 ;

==05/05/2009==
Trevius: SoF - Melee stun/bash no longer causes you to spin
Trevius: SoF - Spell Fizzles and Interrupts no longer cause abnormally long refresh times
realityincarnate: Fixed lore check bug with items in lore group -1
KLS: DoTs should no longer break roots early.
KLS: Added Special Attack hit magical 'm' and special attack hit bane 'b', will allow the mobs affected to hit things that require magical or bane weapons to hit.

==05/04/2009==
KLS: Code block for pets getting sent into attack did not verify that other was not null, causing rare crashes the old way and a pretty common crash with it's new positioning.  This has been corrected.
Derision: Updated spell_type in altadv_vars table to reflect the shared reuse timer ID that it really is.
Derision: AA reuse timers should now display correctly with hotkeys remaining depressed when appropriate.