@@ -456,8 +456,10 @@ void Client::ProcessMovePC(int32 zoneID, float x, float y, float z, float headin
 		if(GetPetID() != 0) {
 			//if they have a pet and they are staying in zone, move with them
 			Mob *p = GetPet();
-			if(p != NULL)
+			if(p != NULL){
+				p->SetPetOrder(SPO_Follow);
 				p->GMMove(x+15, y, z);	//so it dosent have to run across the map.
+			}
 		}
 	}
 
